--- a/gb/21/12/11/n13431076.md
+++ b/gb/21/12/11/n13431076.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/iyxyqt3645/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/iyxyqt3645/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/iyxyqt3645/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/iyxyqt3645/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/iyxyqt3645/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>英外长：G7会议团结西方国家 捍卫自由世界</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/06/GettyImages-1207452085-600x400.jpg" />
 <h6>英国外长莉斯·特拉斯（Liz Truss）资料照。 (TOLGA AKMEN/AFP via Getty Images)
 </h6>
 <hr>
 	<p>【大纪元2021年12月11日讯】（大纪元记者陈霆综合报导）周六（12月11日），G7外长会议将于英国北部的利物浦将召开。英国呼吁成员们应表现团结，共同捍卫“自由世界”。</p>
-<p>英国是现任的G7主席国，英国外长莉斯·特拉斯（Liz Truss，港译<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E5%8D%93%E6%85%A7%E6%80%9D.md#1">卓慧思</a>）说，这场会议是民主国家面对中俄等对手时，展现“反对恶意行为的统一战线”的机会。</p>
-<p>在会议召开之际，西方国家正努力应对各项危机，包括：<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>对<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>可能的入侵、<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在南海挑起的紧张局势，以及可能破裂的<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%BC%8A%E6%9C%97%E6%A0%B8%E5%8D%8F%E8%AE%AE.md#1">伊朗核协议</a>。</p>
+<p>英国是现任的G7主席国，英国外长莉斯·特拉斯（Liz Truss，港译<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%8D%93%E6%85%A7%E6%80%9D.md#1">卓慧思</a>）说，这场会议是民主国家面对中俄等对手时，展现“反对恶意行为的统一战线”的机会。</p>
+<p>在会议召开之际，西方国家正努力应对各项危机，包括：<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>可能的入侵、<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>在南海挑起的紧张局势，以及可能破裂的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BC%8A%E6%9C%97%E6%A0%B8%E5%8D%8F%E8%AE%AE.md#1">伊朗核协议</a>。</p>
 <p>包括美国国务卿布林肯（Antony Blinken）在内，法国、意大利、德国、日本、加拿大的外交首长，都将亲自出席这场会议。</p>
 <p>其余，来自一些欧盟国家、澳大利亚、韩国、印度和东盟（ASEAN）的官员们，也将受邀与会。</p>
-<p>特拉斯（Liz Truss）说：“本周末的G7会议??是关于志同道合的主要经济体之间的团结，我们将绝对坚定地反对侵略，包括<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>对<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>的姿态。”</p>
-<p>她还承诺，G7将提供安全和经济支持，以捍卫世界各地的“自由边界”。她指的是美国、欧盟和英国，正在创建一系列西方基础设施投资工具，以对抗<ahref="https://github.com/iyxyqt3645/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>的“一带一路”倡议。</p>
+<p>特拉斯（Liz Truss）说：“本周末的G7会议??是关于志同道合的主要经济体之间的团结，我们将绝对坚定地反对侵略，包括<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%BF%84%E7%BD%97%E6%96%AF.md#1">俄罗斯</a>对<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B9%8C%E5%85%8B%E5%85%B0.md#1">乌克兰</a>的姿态。”</p>
+<p>她还承诺，G7将提供安全和经济支持，以捍卫世界各地的“自由边界”。她指的是美国、欧盟和英国，正在创建一系列西方基础设施投资工具，以对抗<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1.md#1">中共</a>的“一带一路”倡议。</p>
 <p>特拉斯说：“我们的目标是扩大自由和民主的范围，我们将打击世界各地试图挑战这一目标的恶性行为者。”</p>
 <p>《卫报》称<ahref="https://www.theguardian.com/world/2021/dec/11/truss-bills-uk-g7-meeting-as-a-show-of-western-unity-against-china-and-russia" target="_blank" rel="noopener noreferrer">链接</a>），英国原本计划将议程重点放在向印太地区局势，以及中共政权带来的威胁上。然而，由于俄罗斯在乌克兰边境陈兵，临时对议程进行了调整。</p>
 <p>本周早先，特拉斯在英国智库“皇家国际事务研究所”（Chatham House）发表演说时表示，西方国家的“自省时代”（age of introspection）已经过去，需要对敌对意识形态的危险性保持清醒。</p>
@@ -25,35 +25,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/21/12/1/n13410779.md#1">欧盟公布3000亿元基建计划 替代一带一路</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/21/12/6/n13419052.md#1">吴钊燮：中共扩张主义可能引发世界大战</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/21/12/7/n13421518.md#1">美抵制北京冬奥 国务院：期待盟友做出决定</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/21/12/10/n13429793.md#1">参议员马基：美国需要在人权方面引领世界</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/1/n13410779.md#1">欧盟公布3000亿元基建计划 替代一带一路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/6/n13419052.md#1">吴钊燮：中共扩张主义可能引发世界大战</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/7/n13421518.md#1">美抵制北京冬奥 国务院：期待盟友做出决定</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/10/n13429793.md#1">参议员马基：美国需要在人权方面引领世界</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a target="_blank" href="https://github.com/upjkzu3674/djy/blob/master/gb/20/2/11/n11861529.md#1">瘟疫来势汹汹  为何绕开了这些人</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/6/n11772347.md#1" target="_blank">一本“千古奇书” 结缘世界各族裔亿万人</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/22/n11539349.md#1" target="_blank">共产暴政录：从毛泽东诗词谈中共卖国</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/26/n11280869.md#1" target="_blank">谴责中共活摘器官 美密苏里州通过决议案</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/20/n11959110.md#1">【新闻看点】“抗疫胜利”炒过头 中共出手抓人</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/20/n11959398.md#1">【疫情最前线】意大利：中国没送任何东西！</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/20/n11958206.md#1">TWICE周子瑜首本个人照片书 4月27日发行</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/19/n11955332.md#1">澳洲性侵案7罪名缠2年 男星高云翔获判无罪</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/2/n11909598.md#1">【命理】长寿的命怎样看？</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
-<li><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/20/3/13/n11937754.md#1">他们为官怎能让老虎自动离界不扰人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339418.md#1">世界十大奇险建筑“悬空寺”的千古之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/29/n13339482.md#1">【未解之谜】寻找转世灵童</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13346265.md#1">【百年真相】从高官到囚徒 崔月犂如何走出秦城</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/30/n13341559.md#1">【舞蹈三剑客】神韵全球巡演期间 难忘的美食回忆</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13355885.md#1">【新闻大家谈】五角大楼揭中共“最高机密”？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356732.md#1">【秦鹏直播】马云及海底捞遇麻烦 因惹赵家人？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/5/n13356729.md#1">【古韵流芳】不计荣辱悲欢 心如砥柱刘禹锡</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352549.md#1">【中国观察】张高丽性丑闻的结局将如何</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13352001.md#1">【一线采访】多地现抢购潮 爆发打斗场面</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351361.md#1">剧中小动作引共鸣 刘涛回应是否在工地干过活</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354084.md#1">顶新发型看秀气场强大 范冰冰获时尚网红大赞</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13351814.md#1">周润发与路人合照罕见露愠色 原因曝光</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349727.md#1">谢丽金受荨麻疹之苦 为健康登山差点送命</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13354413.md#1">林青霞庆67岁生日 手上鸽子蛋巨钻抢镜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/10/31/n13342805.md#1">刷牙就能让白发变黑  这些中医处方为何历久不衰？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/1/n13344694.md#1">10类护眼食物大公开 吃对三餐远离眼病</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/4/n13351980.md#1">大豆原来这么好 10种豆制品 哪些营养胜一筹</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13349792.md#1">大陆小说作家自曝账号被盗 骇客竟帮忙写稿</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/11/3/n13350110.md#1">小白球被鳄鱼咬走 挥杆的美国男子笑歪了</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/iyxyqt3645/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/iyxyqt3645/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/11/n13431076.htm">英外长：G7会议团结西方国家 捍卫自由世界</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/12/11/n13431076.htm">英外长：G7会议团结西方国家 捍卫自由世界</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/iyxyqt3645/djy/blob/master/gb/21/12/11/n13431076.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/iyxyqt3645/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/iyxyqt3645/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/iyxyqt3645/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/iyxyqt3645/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/21/12/11/n13431076.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
